<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/gardensLinearLayout"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_zrsj" />

        <EditText
            android:id="@+id/transfer_farm_in_ZRSJ"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_zrf" />

        <EditText
            android:id="@+id/transfer_farm_in_ZRF"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_srf" />

        <EditText
            android:id="@+id/transfer_farm_in_SRF"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_zrfs" />

        <Spinner
            android:id="@+id/transfer_farm_in_ZRFS"
            style="@style/gardensRight"
            android:entries="@array/tdjb" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_tdzrnj" />

        <LinearLayout style="@style/gardensRight" >

            <EditText
                android:id="@+id/transfer_farm_in_TDZRMJ"
                style="@style/gardensRight"
                android:layout_weight="15"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/gardensRight"
                android:layout_weight="80"
                android:text="@string/edit_collection_basic_centiare" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_zrqyt" />

        <EditText
            android:id="@+id/transfer_farm_in_ZRQYT"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_zrhyt" />

        <EditText
            android:id="@+id/transfer_farm_in_ZRHYT"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_tdsysynq" />

        <EditText
            android:id="@+id/transfer_farm_in_TDSYSYNQ"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_transfer_farm_in_tdzrdj" />

        <LinearLayout style="@style/gardensRight" >

            <EditText
                android:id="@+id/transfer_farm_in_TDZRDJ"
                style="@style/gardensRight"
                android:layout_weight="15"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/gardensRight"
                android:layout_weight="80"
                android:text="@string/edit_collection_basic_univalence" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_market_business_sell_farm_in_tdcrzj" />

        <LinearLayout style="@style/gardensRight" >

            <EditText
                android:id="@+id/transfer_farm_in_TDZRZJ"
                style="@style/gardensRight"
                android:layout_weight="15"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/gardensRight"
                android:layout_weight="80"
                android:text="@string/edit_collection_basic_millon" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>