<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_location_info_lon" />

        <EditText
            android:id="@+id/location_info_Lon"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_location_info_lat" />

        <EditText
            android:id="@+id/location_info_Lat"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_location_info_bjdmc" />

        <EditText
            android:id="@+id/location_info_BJDMC"
            style="@style/gardensRight"
            android:hint="@string/edit_collection_location_info_bjdmc_hint" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_location_info_zbxt" />

        <EditText
            android:id="@+id/location_info_ZBXT"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_location_info_mark" />

        <EditText
            android:id="@+id/location_info_Mark"
            style="@style/gardensRight" />
    </LinearLayout>

</LinearLayout>