<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/gardensLinearLayout"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_zdrjl" />

        <EditText
            android:id="@+id/other_info_ZDRJL"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_hxwkfsp" />

        <Spinner
            android:id="@+id/other_info_HXWKFSP"
            style="@style/gardensRight"
            android:entries="@array/tdjb" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_hxnkfsp" />

        <Spinner
            android:id="@+id/other_info_HXNKFSP"
            style="@style/gardensRight"
            android:entries="@array/tdjb" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_sztdjb" />

        <Spinner
            android:id="@+id/other_info_SZTDJB"
            style="@style/gardensRight"
            android:entries="@array/tdjb" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_szdjqd" />

        <EditText
            android:id="@+id/other_info_SZDJQD"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_xzqdm" />

        <EditText
            android:id="@+id/other_info_XZQDM"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_cjyh" />

        <EditText
            android:id="@+id/other_info_LRR"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_cjsj" />

        <EditText
            android:id="@+id/other_info_LRSJ"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_other_info_xmdkqy" />

        <EditText
            android:id="@+id/other_info_XMDKQY"
            style="@style/gardensRight" />
    </LinearLayout>

</LinearLayout>