<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/gardensLinearLayout"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_jlmc" />

        <EditText
            android:id="@+id/basic_info_JLMC"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_jldm" />

        <EditText
            android:id="@+id/basic_info_JLDM"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_tdsyz" />

        <EditText
            android:id="@+id/basic_info_TDSYZ"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_tdzsh" />

        <EditText
            android:id="@+id/basic_info_TDZSH"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_tdzl" />

        <EditText
            android:id="@+id/basic_info_TDZL"
            style="@style/gardensRight" />
    </LinearLayout>

    <LinearLayout
        style="@style/gardensLinearLayout"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            style="@style/gardensLeft"
            android:text="@string/edit_collection_basic_info_qsxz" />

        <Spinner
            android:id="@+id/basic_info_QSXZ"
            style="@style/gardensRight"
            android:entries="@array/qsxz" />
    </LinearLayout>

</LinearLayout>