<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:town="http://schemas.android.com/apk/res/com.example.town_land_collect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.town_land_collect.activity.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal" >

        <com.example.town_land_collect.view.ChangeColorView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            town:myicon="@drawable/ic_menu_start_conversation"
            town:text="@string/tab_index"
            town:text_size="12sp" />

        <com.example.town_land_collect.view.ChangeColorView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            town:myicon="@drawable/ic_menu_friendslist"
            town:text="@string/tab_collection"
            town:text_size="12sp" />

        <com.example.town_land_collect.view.ChangeColorView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            town:myicon="@drawable/ic_menu_emoticons"
            town:text="@string/tab_task"
            town:text_size="12sp" />

        <com.example.town_land_collect.view.ChangeColorView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            town:myicon="@drawable/ic_menu_allfriends"
            town:text="@string/tab_map"
            town:text_size="12sp" />
    </LinearLayout>

</LinearLayout>